--- a/accounting/templates/accounting/regularly_collect.html
+++ b/accounting/templates/accounting/regularly_collect.html
@@ -215,22 +215,22 @@
                         <div class="popupArticleCategori">추가입력사항</div> 
                         <div class="popupArticleBox">
                             <div class="popupArticleDouble">
-                                <label for="" class="popupArticleLabel">항목</label>
-                                <input autocomplete="off" name="category" type="text" class="popupArticleinput">
+                                <label for="" class="popupArticleLabel"><span class="importantStar">*</span>항목</label>
+                                <input autocomplete="off" name="category" type="text" class="popupArticleinput length100 essential">
                             </div>
                             <div class="popupArticleDouble">
                                 <label for="" class="popupArticleLabel">비고</label>
-                                <input autocomplete="off" name="note" type="text" class="popupArticleinput">
+                                <input autocomplete="off" name="note" type="text" class="popupArticleinput length100">
                             </div>
                         </div>
                         <div class="popupArticleBox">
                             <div class="popupArticleDouble">
-                                <label for="" class="popupArticleLabel">공급가액</label>
-                                <input autocomplete="off" name="value" type="text" class="popupArticleinput amountInput">
+                                <label for="" class="popupArticleLabel"><span class="importantStar">*</span>공급가액</label>
+                                <input autocomplete="off" name="value" type="text" class="popupArticleinput amountInput length100 essential">
                             </div>
                             <div class="popupArticleDouble">
-                                <label for="" class="popupArticleLabel">부가세</label>
-                                <input autocomplete="off" name="VAT" type="text" class="popupArticleinput amountInput">
+                                <label for="" class="popupArticleLabel"><span class="importantStar">*</span>부가세</label>
+                                <input autocomplete="off" name="VAT" type="text" class="popupArticleinput amountInput length100 essential">
                             </div>
                         </div>
                         <div class="popupArticleBox">
