--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -285,7 +285,7 @@
         <div class="popupArticleBox">
           <div class="popupArticleDouble">
             <label for="" class="popupArticleLabel"><span class="importantStar">*</span>주소</label>
-            <input autocomplete="off" name="address" type="text" class="popupArticleinput length100 hrAddress">
+            <input autocomplete="off" name="address" type="text" class="popupArticleinput length100 hrAddress editEssential">
           </div>
           <div class="popupArticleDouble">
             <label for="" class="popupArticleLabel">비고</label>
