--- a/accounting/templates/accounting/deposit.html
+++ b/accounting/templates/accounting/deposit.html
@@ -143,7 +143,7 @@
 
 <div class="popupAreaModules">
   <div class="popupBgModules"></div>
-  <form method="post" action="{% url 'accounting:deposit_create' %}" class="popupContainer popupContainerDouble" enctype="multipart/form-data">
+  <form method="post" action="{% url 'accounting:deposit_create' %}" class="popupContainer popupContainerDouble creteForm" enctype="multipart/form-data">
       {% csrf_token %}
       <div class="popupHeader">
           <div class="popupTitle">입금내역 등록</div>
@@ -152,11 +152,11 @@
           <div class="popupSection">
               <div class="popupArticleBox">
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">거래일시</label>
-                      <input autocomplete="off" name="date" type="date" class="popupArticleinput">
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>거래일시</label>
+                      <input autocomplete="off" name="date" type="date" class="popupArticleinput essential">
                   </div>
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">지급방식</label>
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>지급방식</label>
                       <select name="payment_method" id="" class="popupArticleinput">
                         <option value="카드">카드</option>
                         <option value="계좌">계좌</option>
@@ -166,28 +166,28 @@
               </div>
               <div class="popupArticleBox">
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">은행명</label>
-                      <input autocomplete="off" name="bank" type="text" class="popupArticleinput">
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>은행명</label>
+                      <input autocomplete="off" name="bank" type="text" class="popupArticleinput length100 essential">
                   </div>
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">가맹점 수수료</label>
-                      <input autocomplete="off" name="commission" type="text" class="popupArticleinput">
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>가맹점 수수료</label>
+                      <input autocomplete="off" name="commission" type="text" class="popupArticleinput length100 essential numberOnly" placeholder="수수료가 없으면 '0'으로 기입해 주세요">
                   </div>
               </div>
               <div class="popupArticleBox">
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">입금액</label>
-                      <input autocomplete="off" name="acc_income" type="text" class="popupArticleinput">
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>입금액</label>
+                      <input autocomplete="off" name="acc_income" type="text" class="popupArticleinput length100 essential numberOnly">
                   </div>
                   <div class="popupArticleDouble">
-                      <label for="" class="popupArticleLabel">입금자명</label>
-                      <input autocomplete="off" name="depositor" type="text" class="popupArticleinput">
+                      <label for="" class="popupArticleLabel"><span class="importantStar">*</span>입금자명</label>
+                      <input autocomplete="off" name="depositor" type="text" class="popupArticleinput length100 essential">
                   </div>
               </div>
           </div>
           <div class="popupFooter">
-              <input autocomplete="off"type="submit" class="btnModules btnModulesCreate" value="등록">
-              <div class="btnModules popupCloseBtn">취소</div>
+                <div class="btnModules btnModulesCreate">등록</div>
+                <div class="btnModules popupCloseBtn">취소</div>
           </div>
       </div>
   </form>
@@ -233,7 +233,7 @@
 
   <div class="popupAreaModules">
     <div class="popupBgModules"></div>
-    <form method="post" action="{% url 'accounting:deposit_edit' %}" class="popupContainer popupContainerDouble" enctype="multipart/form-data">
+    <form method="post" action="{% url 'accounting:deposit_edit' %}" class="popupContainer popupContainerDouble editForm" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="popupHeader">
             <div class="popupTitle">입금내역 수정</div>
@@ -242,11 +242,11 @@
             <div class="popupSection">
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">거래일시</label>
-                        <input autocomplete="off" name="date" type="date" class="popupArticleinput editDate">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>거래일시</label>
+                        <input autocomplete="off" name="date" type="date" class="popupArticleinput essentialEdit editDate">
                     </div>
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">지급방식</label>
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>지급방식</label>
                         <select name="payment_method" id="editPayment_method" class="popupArticleinput editDepositType">
                           <option value="카드">카드</option>
                           <option value="계좌">계좌</option>
@@ -256,27 +256,27 @@
                 </div>
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">은행명</label>
-                        <input autocomplete="off" name="bank" type="text" class="popupArticleinput editBankName">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>은행명</label>
+                        <input autocomplete="off" name="bank" type="text" class="popupArticleinput essentialEdit length100 editBankName">
                     </div>
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">가맹점 수수료</label>
-                        <input autocomplete="off" name="commission" type="text" class="popupArticleinput editVat">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>가맹점 수수료</label>
+                        <input autocomplete="off" name="commission" type="text" class="popupArticleinput essentialEdit length100 editVat numberOnly">
                     </div>
                 </div>
                 <div class="popupArticleBox">
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">입금액</label>
-                        <input autocomplete="off" name="acc_income" type="text" class="popupArticleinput editDepositPrice">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>입금액</label>
+                        <input autocomplete="off" name="acc_income" type="text" class="popupArticleinput essentialEdit length100 editDepositPrice numberOnly">
                     </div>
                     <div class="popupArticleDouble">
-                        <label for="" class="popupArticleLabel">입금자명</label>
-                        <input autocomplete="off" name="depositor" type="text" class="popupArticleinput editDepositorName">
+                        <label for="" class="popupArticleLabel"><span class="importantStar">*</span>입금자명</label>
+                        <input autocomplete="off" name="depositor" type="text" class="popupArticleinput essentialEdit length100 editDepositorName">
                     </div>
                 </div>
             </div>
             <div class="popupFooter">
-                <input autocomplete="off"type="submit" class="btnModules btnModulesCreate" value="수정">
+                <div class="btnModules btnModulesEdit">수정</div>
                 <div class="btnModules popupCloseBtn editPopupCloseBtn">취소</div>
             </div>
         </div>
@@ -314,4 +314,6 @@
 <script src="{% static 'js/accounting/amountProcessed.js' %}"></script>
 <script src="{% static 'js/accounting/load.js' %}"></script>
 <script src="{% static 'js/accounting/edit.js' %}"></script>
+<script src="{% static 'js/accounting/essential.js' %}"></script>
+<script src="{% static 'js/onlyNumber.js' %}"></script>
 {% endblock %}
